功能更新：完善登录功能