@@ -5,10 +5,12 @@ import cn.chenyunlong.qing.domain.auth.user.QingUser;
 import cn.chenyunlong.qing.domain.auth.user.dto.creator.UserCreator;
 import cn.chenyunlong.qing.domain.auth.user.service.IUserService;
 import cn.chenyunlong.qing.infrastructure.support.email.IEmailService;
+import cn.chenyunlong.qing.security.config.SecurityProperties;
 import cn.chenyunlong.qing.security.entity.AuthUser;
 import cn.chenyunlong.qing.security.exception.RegisterUserFailureException;
 import cn.chenyunlong.qing.security.service.UmsUserDetailsService;
 import cn.hutool.core.util.IdUtil;
+import cn.hutool.core.util.StrUtil;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
@@ -31,6 +33,7 @@ public class UmsUserDetailsServiceImpl implements UmsUserDetailsService {
     private final IUserService userService;
     private final PasswordEncoder passwordEncoder;
     private final IEmailService emailService;
+    private final SecurityProperties securityProperties;
 
     @Override
     public UserDetails loadUserByUserId(String userId) throws UsernameNotFoundException {
@@ -39,45 +42,59 @@ public class UmsUserDetailsServiceImpl implements UmsUserDetailsService {
             throw new UsernameNotFoundException("用户名未找到!");
         }
         QingUser qingUser = userOptional.get();
-        return new User(qingUser.getUsername(), qingUser.getPassword(),
-            true,
-            true,
-            true,
-            true,
-            AuthorityUtils.commaSeparatedStringToAuthorityList("ROLE_VISIT, ROLE_USER"));
+        return User.builder()
+                   .username(String.valueOf(qingUser.getUid()))
+                   .password(qingUser.getPassword())
+                   .credentialsExpired(false)
+                   .accountExpired(false)
+                   .authorities(AuthorityUtils.commaSeparatedStringToAuthorityList("ROLE_VISIT, ROLE_USER"))
+                   .disabled(false)
+                   .build();
     }
 
     @Override
-    public List<Boolean> existedByUsernames(String... usernames) {
-        return Arrays.stream(usernames).map(username -> false).collect(Collectors.toList());
+    public List<Boolean> existedByNickNames(String... nicknames) {
+        List<QingUser> userNames = userService.findByUserNickNames(Arrays.stream(nicknames).collect(Collectors.toSet()));
+        List<String> existsUserNames = userNames.stream().map(QingUser::getUsername).toList();
+        return Arrays.stream(nicknames).map(existsUserNames::contains).collect(Collectors.toList());
     }
 
     @Override
     public UserDetails loadUserByUsername(String username) throws UsernameNotFoundException {
-        Optional<QingUser> userOptional = userService.findByUsername(username);
+        Optional<QingUser> userOptional = Optional.empty();
+        if (StrUtil.contains(username, "@")) {
+            userOptional = userService.findByEmail(username);
+        }
         if (userOptional.isEmpty()) {
-            throw new UsernameNotFoundException("用户名未找到!");
+            userOptional = userService.findByUsername(username);
+            if (userOptional.isEmpty()) {
+                throw new UsernameNotFoundException("用户名未找到!");
+            }
         }
         QingUser qingUser = userOptional.get();
         log.info("Demo ======>: 登录用户名：{}, 登录成功", username);
-        return new User(qingUser.getUsername(), qingUser.getPassword(),
-            true,
-            true,
-            true,
-            true,
-            AuthorityUtils.commaSeparatedStringToAuthorityList("ROLE_VISIT, ROLE_USER"));
+        return User.builder()
+                   .username(qingUser.getUsername())
+                   .password(qingUser.getPassword())
+                   .credentialsExpired(false)
+                   .accountExpired(false)
+                   .accountLocked(false)
+                   .accountExpired(false)
+                   .disabled(false)
+                   .authorities(AuthorityUtils.commaSeparatedStringToAuthorityList("ROLE_VISIT, ROLE_USER"))
+                   .build();
     }
 
     @Override
-    public UserDetails registerUser(AuthUser authUser, String username, String defaultAuthority, String decodeState) throws RegisterUserFailureException {
+    public UserDetails registerUser(AuthUser authUser, String nickname, String defaultAuthority, String decodeState) throws RegisterUserFailureException {
         UserCreator creator = new UserCreator();
         creator.setUid(IdUtil.getSnowflakeNextId());
-        creator.setUsername(username);
-        creator.setPassword("test");
+        creator.setUsername(IdUtil.getSnowflakeNextIdStr());
+        creator.setNickname(nickname);
         creator.setEmail(authUser.getEmail());
         creator.setDescription(authUser.getRemark());
         // 默认密码，123456
-        String encodedPassword = passwordEncoder.encode("123456");
+        String encodedPassword = passwordEncoder.encode(securityProperties.getDefaultPassword());
         creator.setPassword(encodedPassword);
         creator.setAvatar(authUser.getAvatar());
         creator.setMfaType(MFAType.NONE);
